# ollala

./: .gitignore  README.md  pyproject.toml
ollala/: client.py
tests/: ollama-responses.yaml  test_client.py
